--- a/app/services.html
+++ b/app/services.html
@@ -388,21 +388,25 @@
                                 1
                             </div>
                             <h1 class="services__title">
-                                Experience Design
+                                Web and development Design
                             </h1>
                         </div>
 
                         <p class="services__text">
-                            The most impressive websites and app experiences are rooted in smart design, embody clear vision, and are backed by the right
-                            technology.
+                            At KJK Africa, we build and design fully interactive websites that extend the 
+                            functions and services of your company to web clients and prospects. 
+                            We have a perfect mash-up of project managers, UI/UX designers, and developers 
+                            that will handle your website development, from ideation to completion. Our service 
+                            provides a complete and comprehensive solution for every 
+                            stage of development, inclusive of design, development, deployment, and maintenance.
                         </p>
 
-                        <ul class="services__list">
+                        <!-- <ul class="services__list">
                             <li>UI/UX Design</li>
                             <li>Graphic Design</li>
                             <li>Industrial Design</li>
                             <li>SEO</li>
-                        </ul>
+                        </ul> -->
 
                         <a href="" class="btn btn--hover btn--link btn--primary">
                             GET A QUOTE
@@ -429,22 +433,130 @@
                                 2
                             </div>
                             <h1 class="services__title">
-                                Web/App Development
+                                Custom Software (Enterprise Software Development) 
                             </h1>
                         </div>
 
                         <p class="services__text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Velit scelerisque in dictum non. Ultrices dui sapien eget mi proin. Sit amet mattis vulputate
-                            enim nulla aliquet porttitor lacus. Rhoncus mattis rhoncus.
+                            We develop reliable, safe, and user-friendly software that reduces your work process,
+                             optimizes effort, and improves profit generation. <br><br>
+                             Whether you are looking for software
+                              to manage your warehouse, map out and distribute your resources 
+                            or simplify the logs of your staff, we can help you. We develop, among other things:
                         </p>
 
                         <ul class="services__list">
+                            <li>Warehouse Management System (WMS)</li>
+                            <li>Time registration software</li>
+                            <li>Enterprise Resource Planning (ERP)</li>
+                             <li> Customer Relationship Management (CRM)</li>
+                            <li> Content Management System (CMS) </li>
+                             <li> Ticket sales systems </li>
+                        </ul>
+
+                        <a href="" class="btn btn--hover btn--link btn--primary">
+                            GET A QUOTE
+                        </a>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="services__container__img services__container__img--space-added">
+                <div class="services__img">
+                    <img src="assets/images/web-development.jpg" alt="" class="services__img__inner-one services__img__inner-one--shift">
+                    <img src="assets/images/Mockup4.png" alt="" class="services__img__inner-two services__img__inner-two--mobile">
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <section class="services services--last">
+
+        <div class="services__container row">
+
+            <div class="services__container__img">
+                <div class="services__img">
+                    <img src="assets/images/branding.jpg" alt="" class="services__img__inner-one services__img__inner-one--floated">
+                    <img src="assets/images/consultbg.png" alt="" class="services__img__inner-two services__img__inner-two--left">
+                </div>
+            </div>
+
+            <div class="services__container__text">
+                <div class="services__container__centering text__left">
+                    <div>
+                        <div class="services__container__title">
+                            <div class="services__numbering">
+                                3
+                            </div>
+                            <h1 class="services__title">
+                                Business Technology Consulting Service 
+                            </h1>
+                        </div>
+
+                        <p class="services__text">
+                            We develop reliable, safe, and user-friendly software that reduces your work process,
+                             optimizes effort, and improves profit generation. <br>
+                             Whether you are looking for software
+                              to manage your warehouse, map out and distribute your resources 
+                            or simplify the logs of your staff, we can help you. We develop, among other things:
+                        </p>
+
+                        <!-- <ul class="services__list">
                             <li>Web Development</li>
                             <li>Mobile App Development</li>
                             <li>Desktop Apps</li>
                             <li>Web Apps</li>
-                        </ul>
+                        </ul> -->
+
+                        <a href="" class="btn btn--hover btn--link btn--primary">
+                            GET A QUOTE
+                        </a>
+
+                    </div>
+                </div>
+
+            </div>
+
+            
+
+        </div>
+
+    </section>
+    <section class="services">
+
+        <div class="services__container row">
+
+            <div class="services__container__text services__container__text--space-removed">
+                <div class="services__container__centering text__left">
+                    <div>
+                        <div class="services__container__title">
+                            <div class="services__numbering">
+                                4
+                            </div>
+                            <h1 class="services__title">
+                               Mobile App Development
+                            </h1>
+                        </div>
+
+                        <p class="services__text">
+                            Tap into the immense growth and productivity potential of mobile technology today 
+                            by building an app for your business and customers. At KJK, we create applications 
+                            that help companies solve real-world problems and provide customers with pleasant
+                             user experience. Our agile processes ensure more transparency, faster development,
+                              and fewer risks. Our service allows small businesses and large corporations to 
+                              have off-the-shelf applications readily integrated or custom-built applications
+                               delivered in record time.
+                         </p>
+
+                        <!-- <ul class="services__list">
+                            <li>Web Development</li>
+                            <li>Mobile App Development</li>
+                            <li>Desktop Apps</li>
+                            <li>Web Apps</li>
+                        </ul> -->
 
                         <a href="" class="btn btn--hover btn--link btn--primary">
                             GET A QUOTE
@@ -481,24 +593,35 @@
                     <div>
                         <div class="services__container__title">
                             <div class="services__numbering">
-                                3
+                                5
                             </div>
                             <h1 class="services__title">
-                                Branding &AMP; Strategy
+                                Corporate E-brand
                             </h1>
                         </div>
 
                         <p class="services__text">
-                            The most impressive websites and app experiences are rooted in smart design, embody clear vision, and are backed by the right
-                            technology.
+                            The most recognizable quality of your business is its identity. 
+                            Your identity creates the first impression on your visitors and target audience. 
+                            As such, it is vital to create a captivating identity that will make a memorable 
+                            first impression on your target audience. This is where we come in. KJK.Africa’s 
+                            branding service is about crafting an identity that reflects your brand ethos and 
+                            captivates your audience. <br>
+
+                            KJK’s branding and creative design services include:
                         </p>
 
                         <ul class="services__list">
-                            <li>UI/UX Design</li>
-                            <li>Graphic Design</li>
-                            <li>Industrial Design</li>
-                            <li>SEO</li>
+                            <li>Brand Strategy</li>
+                            <li>Brand Guidelines Development</li>
+                            <li>Naming</li>
+                            <li>Logo/Brand Identity Design</li>
+                            <li>Graphic Design (Flyers, Brochures, Magazines, etc.) </li>
+                            <li>Business Collateral/Stationery Design </li>
+                            <li>Print Design</li>
+                            <li>Product Design</li>
                         </ul>
+
 
                         <a href="" class="btn btn--hover btn--link btn--primary">
                             GET A QUOTE
