--- a/app/quote.html
+++ b/app/quote.html
@@ -382,28 +382,33 @@
                     <div class="quote__list-container">
                         <img src="assets/images/bullet-pro.png" class="quote__list-img" alt="">
                         <h3 class="quote__sub-title">
-                            <span>1.</span> We will prepare a proposal
+                            <span>1.</span> Consultation
                         </h3>
                         <p class="quote__text">
-                            Required scope, timeline and price will be included if you provide us with detailed information of the project
+                            Before we start your project, we set up a meeting to find out your needs 
+                            and vision of the final project. Afterward, we put our best minds to 
+                            creating your product
                         </p>
                     </div>
                     <div class="quote__list-container">
                         <img src="assets/images/bullet-pro.png" class="quote__list-img" alt="">
                         <h3 class="quote__sub-title">
-                            <span>2.</span> Together we discuss
+                            <span>2.</span> Regular Update
                         </h3>
                         <p class="quote__text">
-                            Let’s get acquainted and discuss all the possible variants and options.
+                            You will get prompt notification all through the product development cycle.
                         </p>
                     </div>
                     <div class="quote__list-container">
                         <img src="assets/images/bullet-pro.png" class="quote__list-img" alt="">
                         <h3 class="quote__sub-title">
-                            <span>3.</span> Together we discuss
+                            <span>3.</span> After service
                         </h3>
                         <p class="quote__text">
-                            When agreement is reached and all goals are set, we can now start the building.
+                            After the completion of the customized software, 
+                            our lead product designers will explain how it works and always 
+                            act as technical support. We are also happy to help you with maintenance 
+                            and making updates.
                         </p>
                     </div>
                 </div>
@@ -465,7 +470,7 @@
                         spectacular products/services, here are a few significant 
                         reasons why you should collaborate with us.
                     </p>
-                    <ul>
+                    <ul style="width: 91%;">
                         <li>Ease of business</li>
                         <li>Minimal Risk</li>
                         <li>Competence</li>
@@ -496,7 +501,7 @@
             <div class="footer__lower-content ">
 
                 <form class="footer__input-container">
-                    <input class="footer__input" placeholder="Email Address" type="email" required aria-required="true">
+                    <input class="footer__input" placeholder="Enter E-mail to sign up for our newsletter" type="email" required aria-required="true">
                     <input type="submit" class="footer__submit" value="Subscribe">
                 </form>
                 <div class="footer__lower-links row">
@@ -505,7 +510,7 @@
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
                         <a href="about.html" class="footer__link ">
-                            About
+                            who we are
                         </a>
                         <a href="work.html" class="footer__link ">
                             How we work
@@ -519,19 +524,22 @@
                         <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
+                        <a href="blog.html" class="footer__link ">
+                            Blog
+                        </a>
                     </div>
                     <div class="footer__lower-right">
-                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="footer__link ">
-                            <img src="assets/images/instagram.png " style="width:20px " alt=" " class="footer__link__logo ">
+                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
+                            <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://twitter.com/KJKAfrica" class="footer__link " target="_blank">
-                            <img src="assets/images/twitter.png " alt=" " style="width:20px " class="footer__link__logo ">
+                        <a href="https://twitter.com/KJKAfrica" class="" target="_blank">
+                            <img src="assets/images/twitter.png " alt=" " style="width:10px " class="footer__link__logo ">
                         </a>
-                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="footer__link " target="_blank">
-                            <img src="assets/images/facebook.png " alt=" " style="width:9px " class="footer__link__logo ">
+                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="" target="_blank">
+                            <img src="assets/images/facebook.png " alt=" " style="width:5px " class="footer__link__logo ">
                         </a>
                         <span class="footer__text__lower ">
-                            &COPY; KJK Africa - 2019. All rights reserved
+                         KJK Africa - 2019. All rights reserved
                         </span>
                     </div>
                 </div>
