--- a/app/team.html
+++ b/app/team.html
@@ -402,6 +402,7 @@
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure culpa earum consequatur, enim asperiores quaerat autem explicabo, dolorem porro quis, ex blanditiis placeat non repellendus vitae alias. Ut, aliquid velit.
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, ullam. Nisi dicta esse sapiente, ratione quisquam minus ut! Magni exercitationem consequatur porro nemo distinctio excepturi in commodi ullam! Numquam, fuga!
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, expedita nesciunt neque impedit voluptatum ut ea quam, sint corporis maxime consequuntur eveniet blanditiis ipsa atque tenetur obcaecati dolorem illo perferendis.
                                 </p>
                             </div>
                         </div>
@@ -421,6 +422,7 @@
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure culpa earum consequatur, enim asperiores quaerat autem explicabo, dolorem porro quis, ex blanditiis placeat non repellendus vitae alias. Ut, aliquid velit.
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, ullam. Nisi dicta esse sapiente, ratione quisquam minus ut! Magni exercitationem consequatur porro nemo distinctio excepturi in commodi ullam! Numquam, fuga!
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos ullam sapiente ipsa quia consectetur suscipit unde, voluptas deleniti maiores, ipsum voluptate officiis vel tenetur! Deserunt excepturi quisquam deleniti sit?
                                 </p>
                             </div>
                         </div>
@@ -434,11 +436,11 @@
 
     </section>
     <section class="">
-        <img src="assets/images/Ellipse-big.png" alt="" class="team__img-bg">
+        <!-- <img src="assets/images/Ellipse-big.png" alt="" class="team__img-bg"> -->
         <div class="row">
             <div class="team__container">
 
-                <h2 class="title xpad">
+                <h2 class="title">
                     Management Team
                 </h2>
 
@@ -516,7 +518,174 @@
         </div>
 
     </section>
-    <section class="team xpad">
+    <section class="team">
+        <img src="assets/images/Ellipse-big.png" alt="" class="team__img-bg">
+        <div class="row">
+            <div class="team__container">
+
+                <h2 class="title">
+                    Our Team
+                </h2>
+
+                <div>
+
+                    <div class="team__container__main">
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/jumoke.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/niyi.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/florence.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/stephen.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/jumoke.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/niyi.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/florence.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/stephen.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/eric.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/mariam.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/eric.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+
+                        <div class="team__item">
+                            <div style="position: relative;">
+                                <div class="team__avatar-wrapper">
+                                    <img src="assets/images/mariam.png" alt="">
+                                </div>
+                            </div>
+                            <div class="team__label">
+                                <h3 class="title__second">CEO</h3>
+                                <span>Jumoke Oduwole</span>
+                            </div>
+                        </div>
+                       
+                    </div>
+                </div>
+
+                
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- <section class="team xpad">
         <img src="assets/images/Ellipse-big.png" alt="" class="team__img-bg">
         <div class="row">
             <div class="team__container">
@@ -691,7 +860,8 @@
 
         </div>
 
-    </section>
+    </section> -->
+
 
     <footer class="footer ">
 
@@ -704,7 +874,7 @@
                         spectacular products/services, here are a few significant 
                         reasons why you should collaborate with us.
                     </p>
-                    <ul>
+                    <ul style="width: 91%;">
                         <li>Ease of business</li>
                         <li>Minimal Risk</li>
                         <li>Competence</li>
@@ -735,7 +905,7 @@
             <div class="footer__lower-content ">
 
                 <form class="footer__input-container">
-                    <input class="footer__input" placeholder="Email Address" type="email" required aria-required="true">
+                    <input class="footer__input" placeholder="Enter E-mail to sign up for our newsletter" type="email" required aria-required="true">
                     <input type="submit" class="footer__submit" value="Subscribe">
                 </form>
                 <div class="footer__lower-links row">
@@ -744,7 +914,7 @@
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
                         <a href="about.html" class="footer__link ">
-                            About
+                            who we are
                         </a>
                         <a href="work.html" class="footer__link ">
                             How we work
@@ -758,19 +928,22 @@
                         <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
+                        <a href="blog.html" class="footer__link ">
+                            Blog
+                        </a>
                     </div>
                     <div class="footer__lower-right">
-                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="footer__link ">
-                            <img src="assets/images/instagram.png " style="width:20px " alt=" " class="footer__link__logo ">
+                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
+                            <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://twitter.com/KJKAfrica" class="footer__link " target="_blank">
-                            <img src="assets/images/twitter.png " alt=" " style="width:20px " class="footer__link__logo ">
+                        <a href="https://twitter.com/KJKAfrica" class="" target="_blank">
+                            <img src="assets/images/twitter.png " alt=" " style="width:10px " class="footer__link__logo ">
                         </a>
-                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="footer__link " target="_blank">
-                            <img src="assets/images/facebook.png " alt=" " style="width:9px " class="footer__link__logo ">
+                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="" target="_blank">
+                            <img src="assets/images/facebook.png " alt=" " style="width:5px " class="footer__link__logo ">
                         </a>
                         <span class="footer__text__lower ">
-                            &COPY; KJK Africa - 2019. All rights reserved
+                         KJK Africa - 2019. All rights reserved
                         </span>
                     </div>
                 </div>
