--- a/app/work.html
+++ b/app/work.html
@@ -397,6 +397,8 @@
 
     <section class="work">
         <img src="assets/images/rect-orange.png" class="work__bg" alt="">
+        <img src="assets/images/E1.png" class="work__ellipse" alt="">
+        <img src="assets/images/Polygon 40.png" class="work__poly" alt="">
         <div class="work__container row">
             <h1 class="work__title">
                 A perfect mash-up of
@@ -424,14 +426,14 @@
     </section>
 
     <section class="">
-
         <div class="work__row">
             <div class="work__container">
 
                 <div>
 
 
-                    <div class="work__container__main">
+                    <div class="work__container--main">
+                        <img src="assets/images/2ccl.png" class="work__ccl" alt="">
 
                         <div class="work__board">
                             <img class="work__base" src="assets/images/c-dough.png" alt="">
@@ -471,7 +473,7 @@
                                     themed TGIF (Thank God Its Friday). Social Friday is always
                                     packed with fun activities such as; karaoke, scrabble, chess, and more.
                                     There is always food to spice things. <br>
-
+                                    <br>
                                     Outside our statutory activities,
                                     we employ a free reign approach to work hours and leisure activities.
                                     Our talents can go on break when then want and work at their own time.
@@ -492,18 +494,18 @@
 
     </section>
 
-    <section>
+    <!-- <section>
         <div class="gallery">
             <h2 class="title" >
                 Gallery
             </h2>
-            <div>
+            <div class="gallery__wrapper">
                 <img class="gallery__bg" src="assets/images/gallerybg.png"  alt="">
                 <div class="gallery__container swiper-wrapper"  >
 
                     <img class="swiper-slide" src="assets/images/office.png" alt="">
                     <img class="swiper-slide" src="assets/images/team4.png" alt="">
-                    <img class="swiper-slide" src="assets/images/jumoke3.png.png" alt="">
+                    <img class="swiper-slide" src="assets/images/jumoke3.png" alt="">
                     <img class="swiper-slide" src="assets/images/team3.png" alt="">
                     <img class="swiper-slide" src="assets/images/team3.png" alt="">
                     <img class="swiper-slide" src="assets/images/team3.png" alt="">
@@ -513,7 +515,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer class="footer ">
 
@@ -522,17 +524,17 @@
                 <div class="footer__left">
                     <h1 class="footer__left--title">WHY SHOULD YOU HIRE US?</h1>
                     <p class="footer__desc">
-                        Besides the fact that over 100 businesses trust us to deliver
-                        spectacular products/services, here are a few significant
+                        Besides the fact that over 100 businesses trust us to deliver 
+                        spectacular products/services, here are a few significant 
                         reasons why you should collaborate with us.
                     </p>
-                    <ul>
+                    <ul style="width: 91%;">
                         <li>Ease of business</li>
                         <li>Minimal Risk</li>
                         <li>Competence</li>
                         <li>Collaboration</li>
                         <li>Successful Experience</li>
-
+                        
                     </ul>
                 </div>
 
@@ -553,11 +555,11 @@
 
             </div>
 
-
+            
             <div class="footer__lower-content ">
 
                 <form class="footer__input-container">
-                    <input class="footer__input" placeholder="Email Address" type="email" required aria-required="true">
+                    <input class="footer__input" placeholder="Enter E-mail to sign up for our newsletter" type="email" required aria-required="true">
                     <input type="submit" class="footer__submit" value="Subscribe">
                 </form>
                 <div class="footer__lower-links row">
@@ -566,7 +568,7 @@
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
                         <a href="about.html" class="footer__link ">
-                            About
+                            who we are
                         </a>
                         <a href="work.html" class="footer__link ">
                             How we work
@@ -580,23 +582,22 @@
                         <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
+                        <a href="blog.html" class="footer__link ">
+                            Blog
+                        </a>
                     </div>
                     <div class="footer__lower-right">
-                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="footer__link ">
-                            <img src="assets/images/instagram.png " style="width:20px " alt=" "
-                                class="footer__link__logo ">
+                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
+                            <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://twitter.com/KJKAfrica" class="footer__link " target="_blank">
-                            <img src="assets/images/twitter.png " alt=" " style="width:20px "
-                                class="footer__link__logo ">
+                        <a href="https://twitter.com/KJKAfrica" class="" target="_blank">
+                            <img src="assets/images/twitter.png " alt=" " style="width:10px " class="footer__link__logo ">
                         </a>
-                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="footer__link "
-                            target="_blank">
-                            <img src="assets/images/facebook.png " alt=" " style="width:9px "
-                                class="footer__link__logo ">
+                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="" target="_blank">
+                            <img src="assets/images/facebook.png " alt=" " style="width:5px " class="footer__link__logo ">
                         </a>
                         <span class="footer__text__lower ">
-                            &COPY; KJK Africa - 2019. All rights reserved
+                         KJK Africa - 2019. All rights reserved
                         </span>
                     </div>
                 </div>
