--- a/app/solutions.html
+++ b/app/solutions.html
@@ -526,7 +526,7 @@
                         spectacular products/services, here are a few significant 
                         reasons why you should collaborate with us.
                     </p>
-                    <ul>
+                    <ul style="width: 91%;">
                         <li>Ease of business</li>
                         <li>Minimal Risk</li>
                         <li>Competence</li>
@@ -557,7 +557,7 @@
             <div class="footer__lower-content ">
 
                 <form class="footer__input-container">
-                    <input class="footer__input" placeholder="Email Address" type="email" required aria-required="true">
+                    <input class="footer__input" placeholder="Enter E-mail to sign up for our newsletter" type="email" required aria-required="true">
                     <input type="submit" class="footer__submit" value="Subscribe">
                 </form>
                 <div class="footer__lower-links row">
@@ -566,7 +566,7 @@
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
                         <a href="about.html" class="footer__link ">
-                            About
+                            who we are
                         </a>
                         <a href="work.html" class="footer__link ">
                             How we work
@@ -580,19 +580,22 @@
                         <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
+                        <a href="blog.html" class="footer__link ">
+                            Blog
+                        </a>
                     </div>
                     <div class="footer__lower-right">
-                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="footer__link ">
-                            <img src="assets/images/instagram.png " style="width:20px " alt=" " class="footer__link__logo ">
+                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
+                            <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://twitter.com/KJKAfrica" class="footer__link " target="_blank">
-                            <img src="assets/images/twitter.png " alt=" " style="width:20px " class="footer__link__logo ">
+                        <a href="https://twitter.com/KJKAfrica" class="" target="_blank">
+                            <img src="assets/images/twitter.png " alt=" " style="width:10px " class="footer__link__logo ">
                         </a>
-                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="footer__link " target="_blank">
-                            <img src="assets/images/facebook.png " alt=" " style="width:9px " class="footer__link__logo ">
+                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="" target="_blank">
+                            <img src="assets/images/facebook.png " alt=" " style="width:5px " class="footer__link__logo ">
                         </a>
                         <span class="footer__text__lower ">
-                            &COPY; KJK Africa - 2019. All rights reserved
+                         KJK Africa - 2019. All rights reserved
                         </span>
                     </div>
                 </div>
